# Kronoterm-Cost-Forecast

./: .gitignore  .ruff.toml  CODE.md  Dockerfile  README.md  compose.yaml  hacs.code-workspace  hacs.json  justfile  pyproject.toml  requirements-ha.txt  requirements.txt
config/: configuration.yaml  ui-lovelace.yaml
config/lovelace/: consumption_forecast.yaml  cost_comparison.yaml  cost_forecast.yaml  sensors.yaml
config/www/: custom-apex-card.js
custom_cards/: package-lock.json  package.json  rollup.config.mjs
custom_cards/src/: custom-apex-card.js
custom_components/: __init__.py
custom_components/kronoterm/: __init__.py  config_flow.py  const.py  consumer_sensor.py  cost_sensor.py  dummy_consumer_sensor.py  energy_price_sensor.py  manifest.json  predictor.py  sensor.py
custom_components/kronoterm/energy_api/: ENTSOE.py  ElektroLJ.py  EnergyCharts.py  GENI.py  NordPool.py  __init__.py  energy_api.py
custom_components/kronoterm/translations/: de.json  en.json  sl.json
test/: conftest.py  test_black_hole.py  test_consumer_sensor.py  test_cost_sensor.py  test_energy_price_sensor.py  test_flows.py  test_init.py  test_predictor.py  test_providers.py
