[project]
name = "kronoterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt", "requirements-ha.txt"] }

[tool.setuptools.packages.find]
exclude = ["config*"]

[dependency-groups]
dev = [
    "homeassistant-stubs>=2024.3.3",
    "mypy>=1.15.0",
    "pytest-socket>=0.7.0",
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.109",
    "ruff>=0.9.9",
    "types-python-dateutil>=2.9.0.20241206",
    "fnv-hash-fast>=1.5.0",
    "psutil-home-assistant>=0.0.1",
]

[tool.pytest.ini_options]
norecursedirs = [".git"]
asyncio_mode = "auto"
addopts = "-p syrupy --strict-markers --cov=custom_components"
testpaths = ["test"]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
no_implicit_optional = false
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "homeassistant.components.*"
ignore_missing_imports = true
